Feature: add standard headings structure.

--- a/application.ini
+++ b/application.ini
@@ -12,7 +12,7 @@ relink = "local"
 
 [images]
 revision  = 1448028346
-watermark = img-style-watermark-4.png
+watermark = img-style-watermark.png
 ; Mask file name in ir6e folder    , Ration , Watermark , MinImgWidth , HPercent
 mask1 = "img-style-mask-1x1.png    , 1      , 0.333     , 200         , 0.1451"
 mask2 = "img-style-mask-10x16.png  , 0.625  , 0.475     , 240         , 0.1301"
